--- a/src/pages/auth/registration/registration.css
+++ b/src/pages/auth/registration/registration.css
@@ -1,10 +1,16 @@
 .register .option {
     text-align: center;
     font-size: 1.5em;
-    padding: 50px 10px;
+    padding: 5px;
     border: 2px solid #e0e0e0;
     cursor: pointer;
     color: #545454;
+    height: 100%;
+    min-height: 130px;
+}
+
+.register .box-content {
+    padding-top: 10%;
 }
 
 .register .option:hover {
